--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,4 +27,4 @@
 			</footer>
 		</body>
 	</html>
-Take note of the {{ page.title }} and {{ conten
+Take note of the {{ page.title }} and {{ conten }}
