Fixed, RSS feed added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,13 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:vojtech.kacmarik@gmail.com" title="e-mail">e-mail</a></li>
+					<li><a href="https://twitter.com/vkacmar" title="Twitter">Twitter</a></li>
+					<li><a href="https://www.linkedin.com/in/vkacmar" title="LinkedIn">LinkedIn</a></li>
+					<li><a href="https://github.com/vojtechkacmarik/" title="GitHub">GitHub</a></li>
+
 				</ul>
 			</footer>
 		</body>
 	</html>
-Take note of the {{ page.title }} and {{ conten }}
+Take note of the {{ page.title }} and {{ content }}
