--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,4 +30,4 @@
 			</footer>
 		</body>
 	</html>
-Take note of the {{ page.title }} and {{ content }}
+Take note of the {{ page.title }} and {{ conten }}
